--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ description = """
 Fern simulation, from the cellular level up.
 """
 
-[workspace]
-members = ["garden"]
+#[workspace]
+#members = ["garden"]
 
 
 
 [dependencies]
 actix-web = "4.1"
 serde = { version = "1.0", features = ["derive"] }
+
 
 [profile.dev]
 
