--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ Fern simulation, from the cellular level up.
 
 [dependencies]
 actix-web = "4.1"
+reqwest = "0.12.7"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.128"
 
 
 [profile.dev]
