--- a/garden/Cargo.toml
+++ b/garden/Cargo.toml
@@ -10,3 +10,9 @@ serde = { version = "1.0.210", features = ["derive"] }
 rand = "0.8.5"
 num = "0.4.3"
 num-complex = "0.4.6"
+log = "0.4.22"
+regex = "1.10.6"
+lazy_static = "1.5.0"
+unicode-normalization = "0.1.24"
+serde_json = "1.0.128"
+reqwest = "0.12.7"
