--- a/multi/Cargo.toml
+++ b/multi/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lazy_static = "1.5.0"
 rayon = "1.10.0"
+async-std = { version = "1", features = ["unstable"] }
